Change to prevent header overflow on mobile.

--- a/pages.css
+++ b/pages.css
@@ -43,7 +43,7 @@ header{
 
 @media (max-width: 600px){
     header{
-        padding: 5px;
+        overflow-x: hidden;
     }
 }
 img {
